# py-embedding-store

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/philiprehberger_embedding_store/: __init__.py
tests/: test_embedding_store.py  test_import.py
