[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-embedding-store"
version = "0.1.1"
description = "In-memory vector store with cosine similarity search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-embedding-store#readme"
Repository = "https://github.com/philiprehberger/py-embedding-store"
Issues = "https://github.com/philiprehberger/py-embedding-store/issues"
Changelog = "https://github.com/philiprehberger/py-embedding-store/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_embedding_store"]
