[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-embedding-store"
version = "0.2.2"
description = "In-memory vector store with cosine similarity search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["numpy>=1.24"]
keywords = ["embedding", "vector", "store", "similarity", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-embedding-store#readme"
Repository = "https://github.com/philiprehberger/py-embedding-store"
Issues = "https://github.com/philiprehberger/py-embedding-store/issues"
Changelog = "https://github.com/philiprehberger/py-embedding-store/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_embedding_store"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
